fix: fix Top buttons gap

--- a/src/layouts/Layout/Header/Top/HeaderUserActionsGuest/HeaderUserActionsGuest.module.scss
+++ b/src/layouts/Layout/Header/Top/HeaderUserActionsGuest/HeaderUserActionsGuest.module.scss
@@ -1,6 +1,6 @@
 .group_btn {
   display: flex;
-  column-gap: 20px;
+  column-gap: 12px;
   align-items: center;
 }
 
